--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -18,7 +18,7 @@
                 <hr>
                 <div class="row profil-icon">
                     <i class="fa fa-envelope-o fa-2x col-md-6"></i>
-                    <i class="fa fa-user-plus fa-2x col-md-6"></i>
+                    <a href="{{ path('edu_speak_add_friend',{'id':user.id})}}"><i class="fa fa-user-plus fa-2x col-md-6"></i></a>
                 </div>
                 <hr>
                 <div class="row">
