--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -65,3 +65,4 @@
 @import "eduspeak/alert.less";
 @import "eduspeak/register.less";
 @import "eduspeak/login.less";
+@import "eduspeak/friends.less";
