--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,8 +10,6 @@
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap-theme.css') }}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/css/uikit.min.css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/js/uikit.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
@@ -80,27 +78,17 @@
             {% block body %}{% endblock %}
             {% block javascripts %}{% endblock %}
         </div>
-        <div class="footer">
-            <div class="row row-condensed">
-                <div class="col-sm-12 space-4 space-top-4">
-                    <ul class="list-layout list-inline text-center h5">
-                        <li><a href="/about/about-us" class="link-contrast afoot">À propos</a></li>
-                        <li><a href="http://blog.airbnb.com" class="link-contrast afoot">Blog</a></li>
-                        <li><a href="/terms" class="link-contrast afoot">Conditions générales et confidentialité</a></li>
-                    </ul>
-                </div>
-
-                <hr class="footer-divider space-top-8 space-4">
-
-                <div class="text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
                     <h2 class="h5 space-4 hide-sm hlink">Rejoignez-nous sur</h2>
                     <ul class="list-layout list-inline" itemscope="" itemtype="http://schema.org/Organization">
                         <li>
                             <a href="https://www.facebook.com/speakit" class="link-contrast footer-icon-container" itemprop="sameAs" target="_blank">
-                        <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x icircle"></i>
-                            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                        </span>
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x icircle"></i>
+                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                </span>
                             </a>
                         </li>
                         <li>
