--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -81,6 +81,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="{{ asset('front/js/eduspeak/morescroll.js') }}"></script>
+        <script src="{{ asset('front/js/eduspeak/porte.js') }}"></script>
         <!-- <footer>
             <div class="row row-condensed">
                 <div class="col-sm-12 space-4 space-top-4">
