--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -46,22 +46,65 @@
         <div class="carousel-caption">
           <h4>Bonjour {{  app.user.username }}</h4>
           <h4>Où voulez vous parler aujourd'hui?</h4>
+          <p class="slogan">"pratiquez comme si vous y étiez"</p>
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Partir en...">
               <span class="input-group-btn">
-                <!--FILTER-->
-                <div class="btn-group">
-                      <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Large button <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        ...
-                      </ul>
-                      </div>
-                  <a href="{{ path('edu_speak_search')}}"><button class="btn btn-default" type="button">Go!</button></a>
+                <button id="porte-button" class="btn btn-default">more</button>
+                  <a href="{{ path('edu_speak_search')}}">
+                  <button class="btn btn-default" type="button">Go!</button>
+                </a>
               </span>
           </div>
-          <p class="slogan">"pratiquez comme si vous y étiez"</p>
+          <div id="porte" class="porte">
+            <div class="content">
+              <div class="row filtres">
+                  <form >
+                      <div class="col-md-2 col-xs-2">
+                          <select class="form-control" name="Langues">
+                              <option>Langues</option>
+                              <option>2</option>
+                              <option>3</option>
+                              <option>4</option>
+                              <option>5</option>
+                          </select>
+                      </div>
+                      <div class="col-md-2 col-xs-2">
+                          <select class="form-control" placeholder="Age min">
+                              <option>Age min</option>
+                              <option>2</option>
+                              <option>3</option>
+                              <option>4</option>
+                              <option>5</option>
+                          </select>
+                      </div> <div class="col-md-2 col-xs-2">
+                          <select class="form-control" placeholder="Age min">
+                              <option>Age max</option>
+                              <option>2</option>
+                              <option>3</option>
+                              <option>4</option>
+                              <option>5</option>
+                          </select>
+                      </div>
+                      <div class="col-md-3 col-xs-3">
+                          <div class="checkbox">
+                              <label>
+                                  <input type="checkbox"> Correspondants connectés
+                              </label>
+                          </div>
+                      </div>
+                      <div class="col-md-2 col-xs-2">
+                          <button type="submit" class="btn btn-edu">Appliquer</button>
+                      </div>
+                      <div class="collapse" id="collapseExample">
+                          extension filtre
+                      </div>
+                  </form>
+              </div>
+
+            </div>
+          </div>
+
         </div>
       </div>
 
