--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -7,7 +7,7 @@
 @mid-width:             50%;
 @mid-height:            50%;
 @page-row-height:       90.7%;
-@page-row-content-height: 90%;
+@page-row-content-height: 90.5vh;
 
 //== Sizes
 //
