Correction bug de décalage lors de l'ouverture du dropdown

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -50,7 +50,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Partir en...">
               <span class="input-group-btn">
-                <button id="porte-button" class="btn btn-default">more</button>
+                <button id="porte-button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-down text-align" aria-hidden="true"></span></button>
                   <a href="{{ path('edu_speak_search')}}">
                   <button class="btn btn-default" type="button">Go!</button>
                 </a>
