--- a/web/front/less/eduspeak/porte.less
+++ b/web/front/less/eduspeak/porte.less
@@ -1,4 +1,5 @@
-.porte{
+.carousel-caption{
+  .porte{
   z-index:1500;
   background-color:white;
   width:100%;
@@ -15,3 +16,4 @@
 .open {
   height:80px !important;
 }
+  }
