--- a/src/EduSpeakBundle/Resources/views/Match/match.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Match/match.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<div class="content">
+<div id="edu-match" class="content">
     <!------------ FILTRES -------------->
     <div class="row filtres">
         <form >
-            <div class="col-md-2">
+            <div class="col-md-2 col-xs-2">
                 <select class="form-control" name="Langues">
                     <option>Langues</option>
                     <option>2</option>
@@ -12,7 +12,8 @@
                     <option>4</option>
                     <option>5</option>
                 </select>
-            </div> <div class="col-md-2">
+            </div>
+            <div class="col-md-2 col-xs-2">
                 <select class="form-control" placeholder="Age min">
                     <option>Age min</option>
                     <option>2</option>
@@ -20,7 +21,7 @@
                     <option>4</option>
                     <option>5</option>
                 </select>
-            </div> <div class="col-md-2">
+            </div> <div class="col-md-2 col-xs-2">
                 <select class="form-control" placeholder="Age min">
                     <option>Age max</option>
                     <option>2</option>
@@ -28,18 +29,21 @@
                     <option>4</option>
                     <option>5</option>
                 </select>
-            </div> <div class="col-md-3">
+            </div>
+            <div class="col-md-3 col-xs-3">
                 <div class="checkbox">
                     <label>
                         <input type="checkbox"> Correspondants connectés
                     </label>
                 </div>
-            </div> <div class="col-md-1">
+            </div>
+            <div class="col-md-1 col-xs-1">
                 <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="fa fa-chevron-down"></i>
                 </button>
-            </div> <div class="col-md-2">
-                <button type="submit" class="btn btn-default">Appliquer les filtres</button>
+            </div>
+            <div class="col-md-2 col-xs-2">
+                <button type="submit" class="btn btn-edu">Appliquer les filtres</button>
             </div>
             <div class="collapse" id="collapseExample">
                 extension filtre
@@ -47,55 +51,101 @@
         </form>
     </div>
 
-
-    <!------------ MATCHING -------------->
-    <div class="matching">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <ul>
-                    {% for matchedUser in matchedUsers %}
-                        <li class="row">
-                            <a class="btn" href="{{path('edu_speak_profil',{'id':matchedUser.id})}}">
-                                {% if app.user.facebookPicture %}
-                                    <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
-                                {% elseif app.user.file %}
-                                    <img class="profile-picture" src="{{ app.user.file }}" alt="Profil" />
-                                {% else %}
-                                    <i class="fa fa-user fa-3x"></i>
-                                {% endif %}
-                            </a>
-                            <h4>{{ matchedUser.username }}</h4>
-                            <a class="start-conversation" href="{{path('chat_create',{'id':matchedUser.id})}}"><i class="fa fa-weixin fa-3x"></i></a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
+    <div class="row content">
+        <!------------ ACTUALITES -------------->
+        <div class="col-md-3 col-xs-4 list-actus">
+            <h5>Actualités</h5>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="actu">
+                        <img src="http://olapaella.fr/images/4eab1e_ec576404d1cf47c6bd1e0dd243cfcd4d.jpg" alt="image" height="110px" width="100%">
+                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
+                            <div class="">
+                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
+                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="actu">
+                        <img src="https://i.ytimg.com/vi/KKUeZegmFRI/maxresdefault.jpg" alt="image" height="110px" width="100%">
+                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
+                            <div class="">
+                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
+                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="actu">
+                        <img src="http://img0.ndsstatic.com/wallpapers/cb278f0eb987d32045e94097bb69ce45_large.jpeg" alt="image" height="110px" width="100%">
+                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
+                            <div class="">
+                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
+                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="actu">
+                        <img src="http://www.realmadrid.com/cs/Satellite?blobcol=urldata&blobheader=image%2Fjpeg&blobkey=id&blobtable=MungoBlobs&blobwhere=1203345194876&ssbinary=true" alt="image" height="110px" width="100%">
+                        <div class="like col-md-6 col-xs-10 col-md-offset-2 col-xs-offset-2">
+                            <div class="">
+                                <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
+                                <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
-    </div>
-</div>
 
-
-<!------------ ACTUALITES -------------->
-{# <div class="actus" >
-    <div class="col-md-3 col-xs-3 col-sm-3">
-        <div class="test">
-            <img src="http://olapaella.fr/images/4eab1e_ec576404d1cf47c6bd1e0dd243cfcd4d.jpg" alt="image" height="110px" width="100%">
-            <div class="like">
-                <div class="">
-                    <button type="submit" class="btn btn-link"><i class="fa fa-heart fa-3x fa-inverse "></i></button>
-                    <button type="submit" class="btn btn-link"><i class="fa fa-times fa-3x fa-inverse"></i></button>
+        <!------------ FRIENDS -------------->
+    {% if matchedUsers is defined %}
+        <div class="col-md-9 col-xs-8 list-friends">
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <ul class="col-md-8 col-xs-10 col-md-offset-2 col-xs-offset-1">
+                        {% for matchedUser in matchedUsers %}
+                            <li class="row">
+                                <div class="user-picture col-md-1 col-xs-2">
+                                    <a href="{{path('edu_speak_profil',{'id':matchedUser.id})}}">
+                                    {% if app.user.facebookPicture %}
+                                        <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
+                                    {% elseif app.user.file %}
+                                        <img class="profile-picture" src="{{ app.user.file }}" alt="Profil" />
+                                    {% else %}
+                                        <i class="fa fa-user fa-3x"></i>
+                                    {% endif %}
+                                </a>
+                                </div>
+                                <div class="user-infos col-md-10 col-xs-8">
+                                    <h4>{{ matchedUser.username }}</h4>
+                                    <h5>{{ matchedUser.email }}</h5>
+                                    <h5>{{ matchedUser.email }}</h5>
+                                </div>
+                                <div class="start-conversation col-md-1 col-xs-2">
+                                    <a href="{{path('chat_create',{'id':matchedUser.id})}}"><i class="fa fa-weixin fa-3x"></i></a>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
+        {% else %}
+            <div class="col-md-9 col-xs-9 list-friends">
+                <div class="row">
+                    <div class="col-md-12 col-xs-12">
+                        <h3 class="friends-empty">No one suits your request</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
-    <div class="col-md-3 col-xs-3 col-sm-3">
-        <img src="https://i.ytimg.com/vi/KKUeZegmFRI/maxresdefault.jpg" alt="image" height="110px" width="100%">
-    </div>
-    <div class="col-md-3 col-xs-3 col-sm-3">
-        <img src="http://img0.ndsstatic.com/wallpapers/cb278f0eb987d32045e94097bb69ce45_large.jpeg" alt="image" height="110px" width="100%">
-    </div>
-    <div class="col-md-3 col-xs-3 col-sm-3">
-        <img src="http://www.realmadrid.com/cs/Satellite?blobcol=urldata&blobheader=image%2Fjpeg&blobkey=id&blobtable=MungoBlobs&blobwhere=1203345194876&ssbinary=true" alt="image" height="110px" width="100%">
-    </div>
-</div>#}
+</div>
 {% endblock %}
