--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -36,7 +36,7 @@
                     background-color: @eduspeak-base-purple;
                     text-decoration: none;
                 }
-                a:active {
+                a:focus {
                     color: white;
                     background-color: @eduspeak-base-purple;
                     text-decoration: none;
