--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -11,7 +11,13 @@ img {
     border-radius: @size-px-30;
     margin-right: @size-px-10;
     width: 4em;
+}
 
+// FILTRES ---------------------------------------------------------------------------
+
+.filtres{
+  background: #DDDBDB;
+  padding: 10px;
 }
 
 // AUTRES ----------------------------------------------------------------------------
