--- a/web/front/less/dropdowns.less
+++ b/web/front/less/dropdowns.less
@@ -43,7 +43,7 @@
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   background-color: @dropdown-bg;
   //border: 1px solid @dropdown-fallback-border; // IE8 fallback
-  border: @gray-border;
+  border: @eduspeak-gray-border;
   //border-radius: @border-radius-base;
   //.box-shadow(0 6px 12px rgba(0,0,0,.175));
   background-clip: padding-box;
@@ -72,7 +72,7 @@
     line-height: @line-height-base;
     color: @dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
-    border-bottom: @gray-border;
+    border-bottom: @eduspeak-gray-border;
   }
 
   > li:last-child a {
