--- a/web/front/less/navbar.less
+++ b/web/front/less/navbar.less
@@ -27,6 +27,9 @@
 
     //cadre blanc autour des links
     .navbar-nav > li{
+      &.dropdown{
+        padding-bottom:10px;
+      }
       &:hover{
         border-style: solid;
         border-color:white;
@@ -52,11 +55,11 @@
         border-right: @gray-light!important;
         border-width: 1px!important;
         //barre de séparation
-        padding-bottom:9px;
+    padding-bottom:9px;
 
-        &.dropdown{
-          padding-bottom:17px;
-        }
+    &.dropdown{
+      padding-bottom:17px;
+    }
     }
 }
 
@@ -469,7 +472,7 @@
       &:hover,
       &:focus {
         color: @navbar-default-link-hover-color;
-        background-color: @navbar-default-link-hover-bg;
+        background-color: transparent; //@navbar-default-link-hover-bg;
       }
     }
     > .active > a {
@@ -477,7 +480,7 @@
       &:hover,
       &:focus {
         color: @navbar-default-link-active-color;
-        background-color: @navbar-default-link-active-bg;
+        background-color: transparent; //@navbar-default-link-active-bg;
       }
     }
     > .disabled > a {
@@ -485,7 +488,7 @@
       &:hover,
       &:focus {
         color: @navbar-default-link-disabled-color;
-        background-color: @navbar-default-link-disabled-bg;
+        background-color: transparent; //@navbar-default-link-disabled-bg;
       }
     }
   }
@@ -494,10 +497,10 @@
     border-color: @navbar-default-toggle-border-color;
     &:hover,
     &:focus {
-      background-color: @navbar-default-toggle-hover-bg;
+      background-color: transparent; //@navbar-default-toggle-hover-bg;
     }
     .icon-bar {
-      background-color: @navbar-default-toggle-icon-bar-bg;
+      background-color: transparent; //@navbar-default-toggle-icon-bar-bg;
     }
   }
 
@@ -507,14 +510,15 @@
   }
 
   // Dropdown menu items
-  .navbar-nav {
+  .navbar-dropdown-profil {
     // Remove background color from open dropdown
     > .open > a {
       &,
       &:hover,
       &:focus {
-        background-color: @navbar-default-link-active-bg;
-        color: @navbar-default-link-active-color;
+        background-color: transparent; //@navbar-default-link-active-bg;
+        //color: @navbar-default-link-active-color;
+        background-image: none !important;
       }
     }
 
@@ -526,7 +530,7 @@
           &:hover,
           &:focus {
             color: @navbar-default-link-hover-color;
-            background-color: @navbar-default-link-hover-bg;
+            background-color: transparent; //@navbar-default-link-hover-bg;
           }
         }
         > .active > a {
@@ -534,7 +538,7 @@
           &:hover,
           &:focus {
             color: @navbar-default-link-active-color;
-            background-color: @navbar-default-link-active-bg;
+            background-color: transparent; //@navbar-default-link-active-bg;
           }
         }
         > .disabled > a {
@@ -542,7 +546,7 @@
           &:hover,
           &:focus {
             color: @navbar-default-link-disabled-color;
-            background-color: @navbar-default-link-disabled-bg;
+            background-color: transparent; //@navbar-default-link-disabled-bg;
           }
         }
       }
