--- a/web/front/less/navbar.less
+++ b/web/front/less/navbar.less
@@ -7,6 +7,9 @@
 //
 // Provide a static navbar from which we expand to create full-width, fixed, and
 // other navbar variations.
+//Toutes les navbar
+
+
 
 ///CUSTOMISATION DE LA NAVBAR PAR ANTOINE pour l'accueil
 .navbar-accueil{
@@ -33,6 +36,7 @@
         border-width: 1px;
         &.dropdown{
             padding-bottom:9px;
+
         }
     }
         >a{
