--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-md-12 col-xs-12 profil-language">
                         <h4>I wish to speak</h4>
-                        {{ form_widget(form.learnLanguages) }}
+                        {{ form_widget(form.learnLanguage) }}
                     </div>
                 </div>
             </div>
@@ -56,10 +56,6 @@
                     <li>
                         <h4>Age</h4>
                         <i>{{ form_widget(form.birthday) }}</i>
-                    </li>
-                    <li>
-                        <h4>Living City</h4>
-                        <i>{{ form_widget(form.cityPrecision) }}</i>
                     </li>
                     <li>
                         <h4>City</h4>
