--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -111,7 +111,7 @@
       {% if language %}
       <div id="choixDestination" class="row">
           <div class="row col-md-offset-2 col-md-8 text-center">
-              <h2>{{ language.name }}</h2>
+              <h2>Suggestions de pays qui parlent {{ language.name }}</h2>
               {% for country in countriesSuggested %}
                   <div class="row col-md-6 center-block">
                       <a class="thumbnail text-center">
