--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -111,9 +111,12 @@
       {% if language %}
       <div id="choixDestination" class="row">
           <div class="row col-md-offset-2 col-md-8 text-center">
+            {% set count = countriesSuggested|length %}
               <h2>Suggestions de pays qui parlent {{ language.name }}</h2>
               {% for country in countriesSuggested %}
-                  <div class="row col-md-6 center-block">
+                  {% if loop.index % count == 0  and count%2!=0 %}
+
+                  <div class="row col-md-12 center-block">
                       <a class="thumbnail text-center">
                           <img class="img-responsive center-block" src="{% path country.picture, 'big' %}" alt="Paris">
 
@@ -122,60 +125,23 @@
                           </div>
                       </a>
                   </div>
+                 {% else%}
+                    <div class="row col-md-6 center-block">
+                        <a class="thumbnail text-center">
+                            <img class="img-responsive center-block" src="{% path country.picture, 'big' %}" alt="Paris">
+
+                            <div class="caption">
+                                <h3>{{ country.name }}</h3>
+                            </div>
+                        </a>
+                    </div>
+                    {% endif %}
               {% endfor %}
           </div>
       </div>
       {% else %}
       Pas de language choisi
       {% endif %}
-
-      {#____________________TEST WIHTOUT THE FUNCTIONS____________________#}
-          {#<div class="row col-md-offset-2 col-md-8 text-center">
-              <h2>Anglais</h2>
-              {% set count = 3 %}
-              {% set isEven = count %}
-              {% for i in 1..count %}
-                {% if isEven is odd %}
-                    {% if count == 1 %}
-                      <div class="row col-md-12 center-block">
-                        <a class="thumbnail text-center">
-                          <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
-                        <div class="caption">
-                          <h3>Angleterre</h3>
-                        </div>
-                        </a>
-                      </div>
-
-                    {% else%}
-                      <div class="row col-md-6 center-block">
-                        <a class="thumbnail text-center">
-                          <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
-
-                        <div class="caption">
-                          <h3>Angleterre</h3>
-                        </div>
-                      </a>
-                      </div>
-                      {% set count = count-1 %}
-                    {% endif %}
-                  {% else%}
-                    <div class="row col-md-6 center-block">
-                      <a class="thumbnail text-center">
-                        <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
-                      <div class="caption">
-                        <h3>Angleterre</h3>
-                      </div>
-                      </a>
-                    </div>
-                    {% set count = count-1 %}
-                  {% endif %}
-                  {% endfor %}
-              </div>
-            </div>#}
-       {#____________________TEST WIHTOUT THE FUNCTIONS____________________#}
-
-
-    {#-------------------UTILISTAEUR NON CONNECTE----------------------------#}
 
     {% else %}
 
